--- a/trunk/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
+++ b/trunk/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
@@ -132,4 +132,7 @@
   <metadata name="openFileDialogTileSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>530, 17</value>
   </metadata>
+  <metadata name="timerUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 54</value>
+  </metadata>
 </root>
