--- a/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
+++ b/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
@@ -135,4 +135,7 @@
   <metadata name="timerUpdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 54</value>
   </metadata>
+  <metadata name="colorDialogBGSelector.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>130, 54</value>
+  </metadata>
 </root>
