--- a/trunk/TileMapEditor/TileMapEditor/TileMapEditor/Properties/Resources.resx
+++ b/trunk/TileMapEditor/TileMapEditor/TileMapEditor/Properties/Resources.resx
@@ -166,4 +166,13 @@
   <data name="rotate_cw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rotate_cw.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="paint_bucket" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\paint_bucket.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pointer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pointer.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tile_pick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_pick.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
