--- a/trunk/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
+++ b/trunk/TileMapEditor/TileMapEditor/TileMapEditor/TileMapEditor.resx
@@ -138,4 +138,7 @@
   <metadata name="colorDialogBGSelector.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>130, 54</value>
   </metadata>
+  <metadata name="saveFileDialogExport.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>291, 54</value>
+  </metadata>
 </root>
